src/askscript/parser/askscript.grammar.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { ask: peg$parseask },
      peg$startRuleFunction  = peg$parseask,

      peg$c0 = function(aH, aB) {
        return new ask.Ask(aH, aB);
      },
      peg$c1 = "ask",
      peg$c2 = peg$literalExpectation("ask", false),
      peg$c3 = "{",
      peg$c4 = peg$literalExpectation("{", false),
      peg$c5 = function(aL, aRT) {
        return new ask.AskHeader(aL === null ? [] : aL, aRT);
      },
      peg$c6 = "(",
      peg$c7 = peg$literalExpectation("(", false),
      peg$c8 = ")",
      peg$c9 = peg$literalExpectation(")", false),
      peg$c10 = function(aL) { return aL },
      peg$c11 = ":",
      peg$c12 = peg$literalExpectation(":", false),
      peg$c13 = function(t) { return t },
      peg$c14 = function(sL) { return new ask.AskBody(sL) },
      peg$c15 = function(sL) { return sL },
      peg$c16 = function(s, sL) { return sL.unshift(s), sL },
      peg$c17 = function(s) {                                      return [s] },
      peg$c18 = "",
      peg$c19 = function() {                                                                return [] },
      peg$c20 = function(s) { return s },
      peg$c21 = function(s) { return new ask.Statement(s) },
      peg$c22 = "=",
      peg$c23 = peg$literalExpectation("=", false),
      peg$c24 = function(m, i, t, v) { return new ask.VariableDefinition(m, i, t === null ? anyType : t, v)},
      peg$c25 = function(e, mCAs) { return new ask.Value(e, mCAs) },
      peg$c26 = function(fH, cB) { return new ask.FunctionDefinition(fH, cB) },
      peg$c27 = function(m, i, tD, aL, rTD) { return new ask.FunctionHeader(m, i, tD, aL, rTD === null ? anyType : rTD) },
      peg$c28 = function(t1) { return t1 },
      peg$c29 = function(t2) { return t2 },
      peg$c30 = function() {                 return [] },
      peg$c31 = ",",
      peg$c32 = peg$literalExpectation(",", false),
      peg$c33 = function(a, aL) { return aL.unshift(a), aL },
      peg$c34 = function(a) { return [a] },
      peg$c35 = function(i, t) { return new ask.Arg(i, t) },
      peg$c36 = function(v) { return v },
      peg$c37 = function(vL) { return vL},
      peg$c38 = function() { return [] },
      peg$c39 = function(v, vL) { vL.unshift(v); return vL },
      peg$c40 = function(v) { return [v] },
      peg$c41 = "if",
      peg$c42 = peg$literalExpectation("if", false),
      peg$c43 = "}",
      peg$c44 = peg$literalExpectation("}", false),
      peg$c45 = function(v, cB, eB) {       return new ask.If(v, cB, eB) },
      peg$c46 = "while",
      peg$c47 = peg$literalExpectation("while", false),
      peg$c48 = function(v, cB) {       return new ask.While(v, cB) },
      peg$c49 = "else",
      peg$c50 = peg$literalExpectation("else", false),
      peg$c51 = function(cB) { return new ask.Else(cB) },
      peg$c52 = "return",
      peg$c53 = peg$literalExpectation("return", false),
      peg$c54 = function(v) {                                                        return new ask.Return(v) },
      peg$c55 = function() {                                                                  return new ask.Return(nullValue) },
      peg$c56 = function(i, cAL) {                       return new ask.FunctionCall(i, cAL) },
      peg$c57 = function(i, cAL) { return new ask.MethodCallApplied(i, cAL === null ? [] : cAL)},
      peg$c58 = function(cAL) { return cAL },
      peg$c59 = function(i) { return new ask.Type(i) },
      peg$c60 = function(v) { return new ask.ValueLiteral(v) },
      peg$c61 = "\"",
      peg$c62 = peg$literalExpectation("\"", false),
      peg$c63 = function(sC) { return sC },
      peg$c64 = function() { return new ask.String(text()) },
      peg$c65 = "[",
      peg$c66 = peg$literalExpectation("[", false),
      peg$c67 = "]",
      peg$c68 = peg$literalExpectation("]", false),
      peg$c69 = function(vL) { return new ask.Array(vL) },
      peg$c70 = function(mEL) { return new ask.Map(mEL) },
      peg$c71 = function(mE, mEL) {  return mEL.unshift(mE), mEL },
      peg$c72 = function(mE) {                       return [mE] },
      peg$c73 = function(i, v) { return new ask.MapEntry(i, v) },
      peg$c74 = "const",
      peg$c75 = peg$literalExpectation("const", false),
      peg$c76 = function() { return new ask.Const() },
      peg$c77 = "let",
      peg$c78 = peg$literalExpectation("let", false),
      peg$c79 = function() { return new ask.Let() },
      peg$c80 = "//",
      peg$c81 = peg$literalExpectation("//", false),
      peg$c82 = peg$anyExpectation(),
      peg$c83 = /^[_$a-zA-Z]/,
      peg$c84 = peg$classExpectation(["_", "$", ["a", "z"], ["A", "Z"]], false, false),
      peg$c85 = /^[\-_$a-zA-Z0-9]/,
      peg$c86 = peg$classExpectation(["-", "_", "$", ["a", "z"], ["A", "Z"], ["0", "9"]], false, false),
      peg$c87 = function() { return new ask.Identifier(text()) },
      peg$c88 = "null",
      peg$c89 = peg$literalExpectation("null", false),
      peg$c90 = function() { return new ask.Null() },
      peg$c91 = "true",
      peg$c92 = peg$literalExpectation("true", false),
      peg$c93 = function() { return new ask.True() },
      peg$c94 = "false",
      peg$c95 = peg$literalExpectation("false", false),
      peg$c96 = function() { return new ask.False() },
      peg$c97 = /^[\-]/,
      peg$c98 = peg$classExpectation(["-"], false, false),
      peg$c99 = /^[0-9]/,
      peg$c100 = peg$classExpectation([["0", "9"]], false, false),
      peg$c101 = function() { return new ask.Int(text()) },
      peg$c102 = ".",
      peg$c103 = peg$literalExpectation(".", false),
      peg$c104 = function() { return new ask.Float(text()) },
      peg$c105 = /^[ !#-[\]-\xFF]/,
      peg$c106 = peg$classExpectation([" ", "!", ["#", "["], ["]", "\xFF"]], false, false),
      peg$c107 = "\\",
      peg$c108 = peg$literalExpectation("\\", false),
      peg$c109 = "u",
      peg$c110 = peg$literalExpectation("u", false),
      peg$c111 = /^[0-9A-Fa-f]/,
      peg$c112 = peg$classExpectation([["0", "9"], ["A", "F"], ["a", "f"]], false, false),
      peg$c113 = /^[1-9]/,
      peg$c114 = peg$classExpectation([["1", "9"]], false, false),
      peg$c115 = " ",
      peg$c116 = peg$literalExpectation(" ", false),
      peg$c117 = "\t",
      peg$c118 = peg$literalExpectation("\t", false),
      peg$c119 = "\n",
      peg$c120 = peg$literalExpectation("\n", false),
      peg$c121 = "\r",
      peg$c122 = peg$literalExpectation("\r", false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseask() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parselineWithoutCode();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parselineWithoutCode();
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseaskHeader();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseaskBody();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseaskFooter();
          if (s4 !== peg$FAILED) {
            s5 = [];
            s6 = peg$parselineWithoutCode();
            while (s6 !== peg$FAILED) {
              s5.push(s6);
              s6 = peg$parselineWithoutCode();
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parseeof();
              if (s6 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c0(s2, s3);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseaskHeader() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parsews();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parsews();
    }
    if (s1 !== peg$FAILED) {
      if (input.substr(peg$currPos, 3) === peg$c1) {
        s2 = peg$c1;
        peg$currPos += 3;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c2); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseaskHeader_argList();
        if (s3 === peg$FAILED) {
          s3 = null;
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parseaskHeader_retType();
          if (s4 === peg$FAILED) {
            s4 = null;
          }
          if (s4 !== peg$FAILED) {
            s5 = [];
            s6 = peg$parsews();
            while (s6 !== peg$FAILED) {
              s5.push(s6);
              s6 = peg$parsews();
            }
            if (s5 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 123) {
                s6 = peg$c3;
                peg$currPos++;
              } else {
                s6 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c4); }
              }
              if (s6 !== peg$FAILED) {
                s7 = [];
                s8 = peg$parsews();
                while (s8 !== peg$FAILED) {
                  s7.push(s8);
                  s8 = peg$parsews();
                }
                if (s7 !== peg$FAILED) {
                  s8 = peg$parselineComment();
                  if (s8 === peg$FAILED) {
                    s8 = null;
                  }
                  if (s8 !== peg$FAILED) {
                    s9 = peg$parsenl();
                    if (s9 !== peg$FAILED) {
                      peg$savedPos = s0;
                      s1 = peg$c5(s3, s4);
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseaskHeader_argList() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parsews();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parsews();
    }
    if (s1 !== peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 40) {
        s2 = peg$c6;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c7); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseargList();
        if (s3 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 41) {
            s4 = peg$c8;
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c9); }
          }
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c10(s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseaskHeader_retType() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parsews();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parsews();
    }
    if (s1 !== peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 58) {
        s2 = peg$c11;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c12); }
      }
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$parsews();
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$parsews();
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parsetype();
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c13(s4);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseaskFooter() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseblockFooter();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parsews();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parsews();
      }
      if (s2 !== peg$FAILED) {
        s1 = [s1, s2];
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseaskBody() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = peg$parsestatementList();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c14(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parsestatementList() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parselineWithoutCode();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parselineWithoutCode();
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parsestatementList_NoEmptyLines();
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$parselineWithoutCode();
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$parselineWithoutCode();
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c15(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsestatementList_NoEmptyLines() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$parsestatement();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parsews();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parsews();
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parselineComment();
        if (s3 === peg$FAILED) {
          s3 = null;
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parsenl();
          if (s4 !== peg$FAILED) {
            s5 = [];
            s6 = peg$parselineWithoutCode();
            while (s6 !== peg$FAILED) {
              s5.push(s6);
              s6 = peg$parselineWithoutCode();
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parsestatementList();
              if (s6 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c16(s1, s6);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parsestatement();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parsews();
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parsews();
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parselineComment();
          if (s3 === peg$FAILED) {
            s3 = null;
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c17(s1);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$c18;
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c19();
        }
        s0 = s1;
      }
    }

    return s0;
  }

  function peg$parsestatement() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parsews();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parsews();
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parsestatement_NoWs();
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$parsews();
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$parsews();
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c20(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsestatement_NoWs() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = peg$parsefunctionDefinition();
    if (s1 === peg$FAILED) {
      s1 = peg$parsevariableDefinition();
      if (s1 === peg$FAILED) {
        s1 = peg$parseif();
        if (s1 === peg$FAILED) {
          s1 = peg$parsewhile();
          if (s1 === peg$FAILED) {
            s1 = peg$parsereturn();
            if (s1 === peg$FAILED) {
              s1 = peg$parsevalue();
            }
          }
        }
      }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c21(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parsevariableDefinition() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;
